Fix form legend alignment bug in firefox

--- a/src/style.css
+++ b/src/style.css
@@ -497,6 +497,9 @@ label {
 
 legend {
   font-size: 1.4rem;
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
 label[for="priority1"],
 label[for="priority2"],
